Fixed country info not aligning with each other in the cards

--- a/src/components/CountryCard.module.css
+++ b/src/components/CountryCard.module.css
@@ -1,25 +1,31 @@
 .container {
   background: white;
-  width: 75%;
   margin: 1rem auto;
   border-radius: 5px;
+  width: 280px;
+  height: 360px;
   box-shadow: 0px 2px 5px 1px hsl(0, 0%, 90%);
 }
 
-.container img {
+.imgContainer {
+  height: 50%;
+}
+
+.imgContainer img {
   width: 100%;
+  height: 100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 
 .infoContainer {
+  background-color: white;
   padding: 0 1.5rem;
-  padding-bottom: 2rem;
 }
 
 .infoContainer h3 {
   font-size: 1.2rem;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   margin-bottom: 1rem;
 }
 
