--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -12,12 +12,18 @@
 
 @media only screen and (min-width: 1024px) {
   .container {
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .container {
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
 }
